# muuuxy

./: Cargo.toml  Containerfile  Dockerfile  LICENSE.txt  README.md  fly.toml
infra/: compose.yml
src/: main.rs
tests/: smoke.rs
