[package]
name = "muuuxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = [
    "json",
    "tokio",
    "ws",
    "query",
    "form",
    "multipart",
] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
base64 = "0.22.1"
http = { version = "0.12.15", package = "reqwest", default-features = false, features = [
    "json",
    "rustls-tls",
] }
m3u8 = { version = "6.0.0", package = "m3u8-rs" }
percent-encoding = "2.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "default",
    "json",
    "env-filter",
] }
uuid = { version = "1.16.0", features = ["v4"] }

[dev-dependencies]
testcontainers = "0.24.0"
testcontainers-modules = "0.12.1"
